Added custom font

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300;400;500;600&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-primary;
+    @apply text-light;
+    @apply font-primary;
+  }
+}
