Added the button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,19 @@
-<!-- add the whole code below in the middle of the page -->
-
-
 <div class="container mx-auto w-full">
-  <section>
-    this is a section
+  <section class="dark:bg-gray-900">
+    <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
+      <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl lg:text-6xl">Angular File
+        Upload</h1>
+    </div>
   </section>
+
+  <div class="file-upload-section flex items-center justify-center">
+    <label for="file-upload" class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 cursor-pointer">
+    <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+      Upload your File!
+    </span>
+      <input id="file-upload" type="file" class="hidden" />
+    </label>
+  </div>
+
 </div>
 
