--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,14 +6,84 @@
     </div>
   </section>
 
-  <div class="file-upload-section flex items-center justify-center">
-    <label for="file-upload" class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 cursor-pointer">
-    <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+  <div class="file-upload-section flex items-center justify-center mb-8">
+    <label for="file-upload"
+           class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 cursor-pointer">
+    <span
+      class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
       Upload your File!
     </span>
-      <input id="file-upload" type="file" class="hidden" />
+      <input id="file-upload" type="file" class="hidden"/>
     </label>
   </div>
+
+  <!--  list of files -->
+
+  <div class="relative overflow-x-auto">
+    <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+      <thead class="text-xs text-highlight dark:bg-gray-700 dark:text-gray-400 bg-gray-800">
+      <tr>
+        <th scope="col" class="px-6 py-3">
+          File Name
+        </th>
+        <th scope="col" class="px-6 py-3">
+          Checksum
+        </th>
+        <th scope="col" class="px-6 py-3">
+          Uploaded At
+        </th>
+        <th scope="col" class="px-6 py-3">
+          Price
+        </th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr class="bg-secondary border-b text-gray-100 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-600 dark:hover:bg-gray-50">
+        <th scope="row" class="px-6 py-4 font-medium text-gray-200 whitespace-nowrap dark:text-white">
+          Apple MacBook Pro 17"
+        </th>
+        <td class="px-6 py-4">
+          Silver
+        </td>
+        <td class="px-6 py-4">
+          Laptop
+        </td>
+        <td class="px-6 py-4">
+          $2999
+        </td>
+      </tr>
+      <tr class="bg-secondary border-b text-gray-100 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-600 dark:hover:bg-gray-50">
+        <th scope="row" class="px-6 py-4 font-medium text-gray-200 whitespace-nowrap dark:text-white">
+          Apple MacBook Pro 17"
+        </th>
+        <td class="px-6 py-4">
+          Silver
+        </td>
+        <td class="px-6 py-4">
+          Laptop
+        </td>
+        <td class="px-6 py-4">
+          $2999
+        </td>
+      </tr>
+      <tr class="bg-secondary border-b text-gray-100 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-600 dark:hover:bg-gray-50">
+        <th scope="row" class="px-6 py-4 font-medium text-gray-200 whitespace-nowrap dark:text-white">
+          Apple MacBook Pro 17"
+        </th>
+        <td class="px-6 py-4">
+          Silver
+        </td>
+        <td class="px-6 py-4">
+          Laptop
+        </td>
+        <td class="px-6 py-4">
+          $2999
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
 
 </div>
 
