--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,34 +52,34 @@
           $2999
         </td>
       </tr>
-      <tr class="bg-secondary border-b text-gray-100 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-600 dark:hover:bg-gray-50">
-        <th scope="row" class="px-6 py-4 font-medium text-gray-200 whitespace-nowrap dark:text-white">
-          Apple MacBook Pro 17"
-        </th>
-        <td class="px-6 py-4">
-          Silver
-        </td>
-        <td class="px-6 py-4">
-          Laptop
-        </td>
-        <td class="px-6 py-4">
-          $2999
-        </td>
-      </tr>
-      <tr class="bg-secondary border-b text-gray-100 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-600 dark:hover:bg-gray-50">
-        <th scope="row" class="px-6 py-4 font-medium text-gray-200 whitespace-nowrap dark:text-white">
-          Apple MacBook Pro 17"
-        </th>
-        <td class="px-6 py-4">
-          Silver
-        </td>
-        <td class="px-6 py-4">
-          Laptop
-        </td>
-        <td class="px-6 py-4">
-          $2999
-        </td>
-      </tr>
+<!--      <tr class="bg-secondary border-b text-gray-100 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-600 dark:hover:bg-gray-50">-->
+<!--        <th scope="row" class="px-6 py-4 font-medium text-gray-200 whitespace-nowrap dark:text-white">-->
+<!--          Apple MacBook Pro 17"-->
+<!--        </th>-->
+<!--        <td class="px-6 py-4">-->
+<!--          Silver-->
+<!--        </td>-->
+<!--        <td class="px-6 py-4">-->
+<!--          Laptop-->
+<!--        </td>-->
+<!--        <td class="px-6 py-4">-->
+<!--          $2999-->
+<!--        </td>-->
+<!--      </tr>-->
+<!--      <tr class="bg-secondary border-b text-gray-100 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-600 dark:hover:bg-gray-50">-->
+<!--        <th scope="row" class="px-6 py-4 font-medium text-gray-200 whitespace-nowrap dark:text-white">-->
+<!--          Apple MacBook Pro 17"-->
+<!--        </th>-->
+<!--        <td class="px-6 py-4">-->
+<!--          Silver-->
+<!--        </td>-->
+<!--        <td class="px-6 py-4">-->
+<!--          Laptop-->
+<!--        </td>-->
+<!--        <td class="px-6 py-4">-->
+<!--          $2999-->
+<!--        </td>-->
+<!--      </tr>-->
       </tbody>
     </table>
   </div>
