--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,10 +48,10 @@
           {{ file.checksum }}
         </td>
         <td class="px-6 py-4">
-          {{ file.created_date | date: 'dd/MM/yyyy' }}
+          {{ file.created_at | date: 'dd/MM/yyyy' }}
         </td>
         <td class="px-6 py-4">
-          {{ file.size }}
+          {{ file.size }} Mb
         </td>
       </tr>
       </tbody>
