--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,11 @@
     </label>
   </div>
 
-  <!--  list of files -->
-
-  <div class="relative overflow-x-auto">
+  <div class="text-center p-3" *ngIf="files.length === 0">
+    <p class="text-1xl font-semibold leading-relaxed text-purple-200 dark:text-white">No files
+      uploaded yet!</p>
+  </div>
+  <div class="relative overflow-x-auto" *ngIf="files.length > 0">
     <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
       <thead class="text-xs text-highlight dark:bg-gray-700 dark:text-gray-400 bg-gray-800">
       <tr>
@@ -57,7 +59,6 @@
       </tbody>
     </table>
   </div>
-
 
 </div>
 
