--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,26 @@
 <div class="container mx-auto w-full">
-  <section class="dark:bg-gray-900">
+  <div id="alert-border-1" *ngIf="this.infoAlert !== ''"
+    class="flex items-center p-4 mb-4 text-neutral-100 border-t-4 border-purple-600 bg-gray-700 dark:text-blue-400 dark:bg-gray-800 dark:border-blue-800 absolute top-0 left-0 right-0 z-50 shadow-lg transition-all ease-in duration-75"
+    role="alert">
+    <svg class="flex-shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+      viewBox="0 0 20 20">
+      <path
+        d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+    </svg>
+    <div class="ml-3 text-sm font-medium">
+      {{ this.infoAlert }}
+    </div>
+    <button type="button"
+      class="ml-auto -mx-1.5 -my-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-blue-400 dark:hover:bg-gray-700"
+      data-dismiss-target="#alert-border-1" aria-label="Close">
+      <span class="sr-only">Dismiss</span>
+      <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+      </svg>
+    </button>
+  </div>
+  <section class="dark:bg-gray-900 mt-12">
     <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
       <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl lg:text-6xl">Angular File
         Upload</h1>
@@ -13,7 +34,7 @@
       class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-secondary dark:bg-gray-900 rounded-md group-hover:bg-opacity-0 text-gray-50">
       Upload your File!
     </span>
-      <input id="file-upload" type="file" class="hidden"/>
+      <input id="file-upload" type="file" class="hidden" (change)="uploadFile($event)" />
     </label>
   </div>
 
